  (not memory blocks), but otherwise leaves variables untouched. Specifying
  which array will de-allocate only that array.  The array variable can
  subsequently be re-dimensioned using DIM [HIMEM].
- BASIC: DIM HIMEM can no longer attempt to create string arrays.
- BASIC: SWAP now works correctly on off-heap arrays.
- BASIC: Fixed a bug in array arithmetic on uint8 arrays

* V1.22.9 - 06 January 2021
- Code: Removed some pointless comparisons (e.g. unsigned < 0)
- System: Accept -- on the commmand line to indicate all further options
  to be passed into the BASIC program even if it's otherwise a Brandy option.
- System: Implemented BBC MOS calls OSRDCH, OSNEWL, OSASCI and OSCLI via the
  traditional CALL &FFxx route.
- System: Enabled generic plain-text printing under Linux (or other platform
  with CUPS, it uses 'lpr' to do the heavy lifting).
- System: Implemented OSBYTE 6 (Printer ignore character), default is 13.
  (Maybe it's a quirk of my printer, but ignoring 10 as default on the BBC
  doesn't print right. Could be CUPS though.)
- Platforms: Fixed a 64-bit regression in the NEW <size> command.
- BASIC: Fix regression on MODE command caused by uint8 data type introduction.
- BASIC: Implemented 64-bit unary indirection using ']' (as per BBCSDL).
- BASIC: Implemented DIM HIMEM (a Basalt extension), in Matrix Brandy this
  allocates memory outside the heap, using malloc() and friends. Memory
  blocks for indirection, and numeric arrays can be created in this.  String
  arrays control blocks will be off the heap, but the strings themselves will
  still be stored on the heap.

* V1.22.8 - 16 September 2020
- BASIC: Fix REM behaviour of DEF line.
- BASIC: Implemented SYS() function, somewhat in line with BBCSDL's version.
  In Matrix Brandy, this calls OS_SWINumberFromString, and also works under
  RISC OS.
- System: Implement two SYS calls for obtaining the address of a system call
  (Brandy_dlgetaddr) and to call it (Brandy_dlcalladdr).