@@ -12,6 +12,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - BASIC: DIM HIMEM can no longer attempt to create string arrays.
 - BASIC: SWAP now works correctly on off-heap arrays.
 - BASIC: Fixed a bug in array arithmetic on uint8 arrays
+- BASIC: Implemented PTR(string$) and PTR(array()) to get data addresses.
 
 * V1.22.9 - 06 January 2021
 - Code: Removed some pointless comparisons (e.g. unsigned < 0)
